--- a/Browser_War.html
+++ b/Browser_War.html
@@ -104,7 +104,7 @@
     </div>
     <div class="col-sm">
         <div>
-            <img src="../../Internet/docs/Image/War.png" class="rounded-circle" alt="browser" width="400" height="400">
+            <img src="Image/War.png" class="rounded-circle" alt="browser" width="400" height="400">
         </div>
     </div>
 
