--- a/History.html
+++ b/History.html
@@ -88,7 +88,7 @@
 <div class="row">
     <div class="col-sm">
         <div>
-            <img src="../../Internet/docs/Image/e.jpeg" class="rounded-circle" alt="browser" width="400" height="400">
+            <img src="Image/e.jpeg" class="rounded-circle" alt="browser" width="400" height="400">
         </div>
     </div>
 
