--- a/Homepage.html
+++ b/Homepage.html
@@ -66,50 +66,50 @@
     <h2 style="text-align:center"> Click Below To Start Learning About The History Of The Internet:</h2>
     <div class="row">
         <div class="col-sm-4">
-            <img src="../../Internet/docs/Image/circle-cropped.png" class="rounded-circle" alt="Teamwork" width="140" height="140">
+            <img src="Image/circle-cropped.png" class="rounded-circle" alt="Teamwork" width="140" height="140">
             <h2>Team</h2>
             <p>Click Here: To Meet The Team</p>
             <p><a class="btn btn-secondary" href="Team.html">View details &raquo;</a></p>
         </div><!-- /.col-sm-4 -->
 
         <div class="col-sm-4">
-            <img src="../../Internet/docs/Image/idea.png" class="rounded-circle" alt="idea" width="140" height="140">
+            <img src="Image/idea.png" class="rounded-circle" alt="idea" width="140" height="140">
             <h2>Objectives</h2>
             <p>Click Here: For Our Objectives</p>
             <p><a class="btn btn-secondary" href="About.html">View details &raquo;</a></p>
         </div><!-- /.col-sm-4 -->
         <div class="col-sm-4">
-            <img src="../../Internet/docs/Image/Gear.png" class="rounded-circle" alt="gear" width="140" height="140">
+            <img src="Image/Gear.png" class="rounded-circle" alt="gear" width="140" height="140">
             <h2>Creation</h2>
             <p>Click Here: To Learn About The Creation Of The Internet</p>
             <p><a class="btn btn-secondary" href="Invention.html">View details &raquo;</a></p>
         </div><!-- /.col-sm-4 -->
         <div class="col-sm-4">
-            <img src="../../Internet/docs/Image/browser.png" class="rounded-circle" alt="browser" width="140" height="140">
+            <img src="Image/browser.png" class="rounded-circle" alt="browser" width="140" height="140">
             <h2>Browser</h2>
             <p>Click Here: To Learn More About The Browser War.</p>
             <p><a class="btn btn-secondary" href="Browser_War.html">View details &raquo;</a></p>
         </div><!-- /.col-sm-4 -->
         <div class="col-sm-4">
-            <img src="../../Internet/docs/Image/Mag.png" class="rounded-circle" alt="Mag" width="140" height="140">
+            <img src="Image/Mag.png" class="rounded-circle" alt="Mag" width="140" height="140">
             <h2>Search</h2>
             <p>Click Here: To Learn more about Internet Search</p>
             <p><a class="btn btn-secondary" href="Internet_Search.html">View details &raquo;</a></p>
         </div><!-- /.col-sm-4 -->
         <div class="col-sm-4">
-            <img src="../../Internet/docs/Image/com.png" class="rounded-circle" alt="com" width="140" height="140">
+            <img src="Image/com.png" class="rounded-circle" alt="com" width="140" height="140">
             <h2>.COM</h2>
             <p>Click Here: For Introduction of .com</p>
             <p><a class="btn btn-secondary" href="Dot_Com.html">View details &raquo;</a></p>
         </div><!-- /.col-sm-4 -->
         <div class="col-sm-4">
-            <img src="../../Internet/docs/Image/Vip.png" class="rounded-circle" alt="Vip" width="140" height="140">
+            <img src="Image/Vip.png" class="rounded-circle" alt="Vip" width="140" height="140">
             <h2>VIP</h2>
             <p>Click Here: To Find Out About Important People In Internet History</p>
             <p><a class="btn btn-secondary" href="People.html">View details &raquo;</a></p>
         </div><!-- /.col-sm-4 -->
         <div class="col-sm-4">
-            <img src="../../Internet/docs/Image/t.png" class="rounded-circle" alt="Time" width="140" height="140">
+            <img src="Image/t.png" class="rounded-circle" alt="Time" width="140" height="140">
             <h2>TimeLine</h2>
             <p>Click Here: To See The Timeline Of The History Of The Internet</p>
             <p><a class="btn btn-secondary" href="History.html">View details &raquo;</a></p>
