--- a/Invention.html
+++ b/Invention.html
@@ -90,7 +90,7 @@
     </div>
     <div class="col-sm">
         <div>
-            <img src="../../Internet/docs/Image/in.jpg" class="rounded-circle" alt="browser" width="400" height="400">
+            <img src="in.jpg" class="rounded-circle" alt="browser" width="400" height="400">
         </div>
     </div>
 
