--- a/People.html
+++ b/People.html
@@ -82,7 +82,7 @@
     </div>
     <div class="col-sm">
         <div>
-            <img src="../../Internet/docs/Image/q.jpg" class="rounded-circle" alt="browser" width="400" height="400">
+            <img src="Image/q.jpg" class="rounded-circle" alt="browser" width="400" height="400">
         </div>
     </div>
 
