--- a/Internet_Search.html
+++ b/Internet_Search.html
@@ -101,7 +101,7 @@
     </div>
     <div class="col-sm">
         <div>
-            <img src="../../Internet/docs/Image/GSearch.jpg" class="rounded-circle" alt="browser" width="400" height="400">
+            <img src="Image/GSearch.jpg" class="rounded-circle" alt="browser" width="400" height="400">
         </div>
     </div>
 
