Add Photo to History.html

--- a/History.html
+++ b/History.html
@@ -91,6 +91,11 @@
             <img src="Image/e.jpeg" class="rounded-circle" alt="browser" width="400" height="400">
         </div>
     </div>
+    <div class="col-sm">
+        <div>
+            <img src="Image/b.jpg" class="rounded-circle" alt="browser" width="400" height="400">
+        </div>
+    </div>
 
     <div class="col-sm">
         <div class="card"  style="width: 250px; height:280px">
