--- a/About.html
+++ b/About.html
@@ -9,13 +9,24 @@
     <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
           integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" rel="stylesheet">
 
-    <title>Hello, world!</title>
+    <style>
+        body {
+            background-color:silver;
+        }
+        button{width:250px}
+        h1{text-align: center}
+        div.b {text-align: left}
+        ul {
+            text-align: left;
+            list-style-position: inside;
+        }
+    </style>
+    <title>About Us</title>
 
     <!-- Navbar content -->
 </head>
 <nav class="navbar navbar-dark bg-primary">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">Navbar</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -37,7 +48,7 @@
                     <a class="nav-link" href="Invention.html">The Invention of the Internet</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="Browser_War.html">Browser War</a>
+                    <a class="nav-link" href="Browser_War.html">Browser Wars</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="Internet_Search.html">Internet Search</a>
@@ -54,7 +65,27 @@
     </div>
 </nav>
 <body>
-<h1>Hello, world!</h1>
+<h1>Meet the Team</h1>
+<div class="row">
+    <div class="col-sm">
+        <div>
+            <img src="Image/WIN_20210219_10_41_51_Pro.jpg" class="rounded-circle" alt="browser" width="400" height="400">
+        </div>
+    </div>
+    <div class="col-sm">
+        <div>
+            <div class="card-header">
+                Meet the Team:
+            </div>
+            <p> Name: Jia Zhong</p>
+            <p>Email: jlz6@njit.edu</p>
+            <p>Education: NJIT</p>
+            <p><a href="https://njit.joinhandshake.com/users/15134682">Handshake Account</a></p>
+        </div>
+    </div>
+
+</div>
+
 
 <!-- Option 1: Bootstrap Bundle with Popper -->
 <script crossorigin="anonymous"
