--- a/About.html
+++ b/About.html
@@ -65,7 +65,7 @@
     </div>
 </nav>
 <body>
-<h1>Meet the Team</h1>
+<h1>Meet the Team:</h1>
 <div class="row">
     <div class="col-sm">
         <div>
@@ -73,7 +73,7 @@
         </div>
     </div>
     <div class="col-sm">
-        <div>
+        <div class="card"  style="width: 350px; height:200px">
             <div class="card-header">
                 Meet the Team:
             </div>
@@ -82,6 +82,37 @@
             <p>Education: NJIT</p>
             <p><a href="https://njit.joinhandshake.com/users/15134682">Handshake Account</a></p>
         </div>
+
+        <div class="card-header">
+            Current Page: Team
+        </div>
+        <form method="get" action="Homepage.html">
+            <button type="submit">Home Page</button>
+        </form>
+        <form method="get" action="About.html">
+            <button type="submit">Objective</button>
+        </form>
+        <form method="get" action="Invention.html">
+            <button type="submit">Creation</button>
+        </form>
+        <form method="get" action="Browser_War.html">
+            <button type="submit">Browser Wars</button>
+        </form>
+
+        <form method="get" action="Dot_Com.html">
+            <button type="submit">.COM</button>
+        </form>
+        <form method="get" action="Internet_Search.html">
+            <button type="submit">Internet Search</button>
+        </form>
+
+        <form method="get" action="People.html">
+            <button type="submit">VIP</button>
+        </form>
+        <form method="get" action="History.html">
+            <button type="submit">Timeline</button>
+        </form>
+    </div>
     </div>
 
 </div>
