--- a/About.html
+++ b/About.html
@@ -75,42 +75,43 @@
     <div class="col-sm">
         <div class="card"  style="width: 350px; height:200px">
             <div class="card-header">
-                Meet the Team:
+                Member:
             </div>
             <p> Name: Jia Zhong</p>
             <p>Email: jlz6@njit.edu</p>
             <p>Education: NJIT</p>
             <p><a href="https://njit.joinhandshake.com/users/15134682">Handshake Account</a></p>
-        <div class="card-header">
-            Current Page: Team
         </div>
-        <form method="get" action="Homepage.html">
-            <button type="submit">Home Page</button>
-        </form>
-        <form method="get" action="About.html">
-            <button type="submit">Objective</button>
-        </form>
-        <form method="get" action="Invention.html">
-            <button type="submit">Creation</button>
-        </form>
-        <form method="get" action="Browser_War.html">
-            <button type="submit">Browser Wars</button>
-        </form>
-
-        <form method="get" action="Dot_Com.html">
-            <button type="submit">.COM</button>
-        </form>
-        <form method="get" action="Internet_Search.html">
-            <button type="submit">Internet Search</button>
-        </form>
-
-        <form method="get" action="People.html">
-            <button type="submit">VIP</button>
-        </form>
-        <form method="get" action="History.html">
-            <button type="submit">Timeline</button>
-        </form>
-    </div>
+        <div class="card"  style="width: 350px; height:200px">
+            <div class="card-header">
+                Current Page: Team
+            </div>
+            <form method="get" action="Homepage.html">
+                <button type="submit">Home Page</button>
+            </form>
+            <form method="get" action="About.html">
+                <button type="submit">Objective</button>
+            </form>
+            <form method="get" action="Invention.html">
+                <button type="submit">Creation</button>
+            </form>
+            <form method="get" action="Browser_War.html">
+                <button type="submit">Browser Wars</button>
+            </form>
+            <form method="get" action="Dot_Com.html">
+                <button type="submit">.COM</button>
+            </form>
+            <form method="get" action="Internet_Search.html">
+                <button type="submit">Internet Search</button>
+            </form>
+            <form method="get" action="People.html">
+                <button type="submit">VIP</button>
+            </form>
+            <form method="get" action="History.html">
+                <button type="submit">Timeline</button>
+            </form>
+        </div>
+        </div>
     </div>
 </div>
 
