Update the objective page: About.html

--- a/About.html
+++ b/About.html
@@ -65,11 +65,11 @@
     </div>
 </nav>
 <body>
-<h1>Meet the Team:</h1>
+<h1>Objectives:</h1>
 <div class="row">
     <div class="col-sm">
         <div>
-            <img src="Image/pexels-ann-nekr-5797900.jpg" class="rounded-circle" alt="browser" width="400" height="400">
+            <img src="Image/pexels-ann-nekr-5797900.jpg"  alt="browser" width="400" height="400">
         </div>
     </div>
     <div>
@@ -82,7 +82,7 @@
             <li> 6) Learn about the Timeline of the Internet</li>
         </ul>
     </div>
-        <div class="card"  style="width: 250px; height:250px">
+        <div class="card"  style="width: 262px; height:250px">
             <div class="card-header">
                 Current Page: Team
             </div>
