--- a/About.html
+++ b/About.html
@@ -72,7 +72,7 @@
             <img src="Image/pexels-ann-nekr-5797900.jpg"  alt="browser" width="400" height="400">
         </div>
     </div>
-    <div>
+    <div class="col-sm">
         <ul>
             <li> 1) Learn about the Creation of the Internet</li>
             <li> 2) Learn about the True History of the Internet:Browser Wars</li>
@@ -82,6 +82,7 @@
             <li> 6) Learn about the Timeline of the Internet</li>
         </ul>
     </div>
+    <div class="col-sm">
         <div class="card"  style="width: 262px; height:250px">
             <div class="card-header">
                 Current Page: Team
@@ -111,6 +112,7 @@
                 <button type="submit">Timeline</button>
             </form>
         </div>
+        <div>
 </div>
 
 
