About.html Fixed code error

--- a/About.html
+++ b/About.html
@@ -82,7 +82,8 @@
             <li> 6) Learn about the Timeline of the Internet</li>
         </ul>
     </div>
-    <div class="col-sm">
+    <div>
+        <div class="col-sm">
         <div class="card"  style="width: 262px; height:250px">
             <div class="card-header">
                 Current Page: Team
@@ -113,9 +114,10 @@
             </form>
         </div>
         <div>
+        </div>
 </div>
-
-
+    </div>
+</div>
 <!-- Option 1: Bootstrap Bundle with Popper -->
 <script crossorigin="anonymous"
         integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"></script>
