--- a/Dot_Com.html
+++ b/Dot_Com.html
@@ -9,13 +9,24 @@
     <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
           integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" rel="stylesheet">
 
-    <title>Hello, world!</title>
+    <style>
+        body {
+            background-color:silver;
+        }
+        button{width:250px}
+        h1{text-align: center}
+        div.b {text-align: left}
+        ul {
+            text-align: left;
+            list-style-position: inside;
+        }
+    </style>
+    <title>Dot Com Bubble</title>
 
     <!-- Navbar content -->
 </head>
 <nav class="navbar navbar-dark bg-primary">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">Navbar</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -37,7 +48,7 @@
                     <a class="nav-link"  href="Invention.html">The Invention of the Internet</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link"  href="Browser_War.html">Browser War</a>
+                    <a class="nav-link"  href="Browser_War.html">Browser Wars</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link"  href="Internet_Search.html">Internet Search</a>
@@ -54,8 +65,80 @@
     </div>
 </nav>
 <body>
-<h1>Hello, world!</h1>
+<h1>Dot Com Bubble</h1>
+<div class="b">
+    <ul>
+        <li>The video starts off by talking about how the internet has forever changed the world. </li>
+        <li>The video then goes on to talk about Amazon and eBay and how those companies were creating an ecommerce website for selling things online. </li>
+        <li>These websites were blowing up in popularity and the creators were making lots of money every day. </li>
+        <li>People on wall street were surprised how fast the internet was growing. </li>
+        <li>The internet was a network growing like we’ve never seen before. </li>
+        <li>In just 4 years when it went public it had 50 million users.  </li>
+        <li>Moore's Law is a law that says that transistors double every 18 months. </li>
+        <li>Another law is Metcalfe’s law. This law says every user that comes onto the network does not increase the networks value by +1 but much more. </li>
+        <li>Metcalfe’s Law caused exponential growth in the number of users on the internet. </li>
+        <li>Breakthrough technologies usually cause bubbles. </li>
+        <li>Amazon was controversial to investors because some people did not think a bookstore can be profitable.  </li>
+        <li>Websites like Amazon also had to get customers to trust them with their credit card info. </li>
+        <li>Public key cryptography allowed for safe credit card info transfer. </li>
+        <li>The private key is used to decrypt the data.  </li>
+        <li>eBay IP0’d and they were worth $2B as they opened. </li>
+        <li>Investors saw the success of eBay and Amazon and it made them invest into any dot com stock they can get their hands on. </li>
+        <li>With companies like eBay and Amazon, many programmers moved to California in hopes of making their own companies or to work with the biggest. </li>
+        <li>The success of tech companies brought about large waves of day traders and resulted in companies and people throwing their money into anything tech. </li>
+        <li>Even though many tech companies were fundamentally unsound, many invested in them because of the fear of missing out on massive return. </li>
+        <li>Telecommunication companies were laying fiber optic cables all over the country at an unsustainable rate without any concern for money or immediate returns. </li>
+        <li>The Fed did nothing about the explosion in tech only until it was too late. They raised interest rates before the bubble burst, but it was not enough. </li>
+        <li>The stock market plummeted 25% and with the terrorist attacks of 9/11, America was done inflating. </li>
+        <li>Dot com boom was helpful for creating the internet infrastructure we have today and creating more stronger companies. </li>
+    </ul>
+</div>
+<div class="row">
+    <div class="col-sm">
+        <div class="embed-responsive embed-responsive-4by3">
+            <iframe width="400" height="400" src="https://www.youtube.com/embed/aQjnkyoNIfg" frameborder="0" allowfullscreen></iframe>
+        </div>
+    </div>
+    <div class="col-sm">
+        <div>
+            <img src="Image/pexels-pixabay-534216.jpg.png" class="rounded-circle" alt="browser" width="400" height="400">
+        </div>
+    </div>
 
+    <div class="col-sm">
+        <div class="card"  style="width: 250px; height:280px">
+            <div class="card-header">
+                Current Page: Browser Wars
+            </div>
+            <form method="get" action="Homepage.html">
+                <button type="submit">Home Page</button>
+            </form>
+            <form method="get" action="Team.html">
+                <button type="submit">Team</button>
+            </form>
+            <form method="get" action="About.html">
+                <button type="submit">Objective</button>
+            </form>
+            <form method="get" action="Invention.html">
+                <button type="submit">Creation</button>
+            </form>
+            <form method="get" action="Internet_Search.html">
+                <button type="submit">Search</button>
+            </form>
+
+            <form method="get" action="Browser_War.html">
+                <button type="submit">Browsers War</button>
+            </form>
+            <form method="get" action="People.html">
+                <button type="submit">VIP</button>
+            </form>
+
+            <form method="get" action="History.html">
+                <button type="submit">Timeline</button>
+            </form>
+        </div>
+    </div>
+</div>
 <!-- Option 1: Bootstrap Bundle with Popper -->
 <script crossorigin="anonymous"
         integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"></script>
