Fix Dot_Com.html Photo

--- a/Dot_Com.html
+++ b/Dot_Com.html
@@ -101,7 +101,7 @@
     </div>
     <div class="col-sm">
         <div>
-            <img src="Image/pexels-pixabay-534216.jpg.png" class="rounded-circle" alt="browser" width="400" height="400">
+            <img src="Image/pexels-pixabay-534216.jpg" class="rounded-circle" alt="browser" width="400" height="400">
         </div>
     </div>
 
