--- a/About.html
+++ b/About.html
@@ -85,7 +85,7 @@
     <div class="col-sm">
         <div class="card"  style="width: 250px; height:260px">
             <div class="card-header">
-                Current Page: Team
+                Current Page: Objective
             </div>
             <form method="get" action="Homepage.html">
                 <button type="submit">Home Page</button>
