--- a/Dot_Com.html
+++ b/Dot_Com.html
@@ -108,7 +108,7 @@
     <div class="col-sm">
         <div class="card"  style="width: 250px; height:280px">
             <div class="card-header">
-                Current Page: Browser Wars
+                Current Page: .COM
             </div>
             <form method="get" action="Homepage.html">
                 <button type="submit">Home Page</button>
