--- a/Invention.html
+++ b/Invention.html
@@ -97,7 +97,7 @@
     <div class="col-sm">
         <div class="card"  style="width: 250px; height:280px">
             <div class="card-header">
-                Current Page: Invention of The Internet
+                Current Page: Creation
             </div>
             <form method="get" action="Homepage.html">
                 <button type="submit">Home Page</button>
