--- a/Team.html
+++ b/Team.html
@@ -80,7 +80,7 @@
             <p> Name: Jia Zhong</p>
             <p>Email: jlz6@njit.edu</p>
             <p>Education: NJIT</p>
-            <p><a href="https://njit.joinhandshake.com/users/15134682">Handshake Account</a></p>
+            <p>Handshake Account:<a href="https://njit.joinhandshake.com/users/15134682">Click Here!</a></p>
         </div>
         <div class="card"  style="width: 250px; height:250px">
             <div class="card-header">
