Add more infor to Team.html

--- a/Team.html
+++ b/Team.html
@@ -73,14 +73,15 @@
         </div>
     </div>
     <div class="col-sm">
-        <div class="card"  style="width: 250px; height:200px">
+        <div class="card"  style="width: 250px; height:250px">
             <div class="card-header">
                 Member:
             </div>
             <p> Name: Jia Zhong</p>
             <p>Email: jlz6@njit.edu</p>
-            <p>Education: NJIT</p>
-            <p>Handshake Account:<a href="https://njit.joinhandshake.com/users/15134682">Click Here!</a></p>
+            <p>Education: New Jersey Institution of Technology</p>
+            <p>Major: Information Technology</p>
+            <p>Handshake Account: <a href="https://njit.joinhandshake.com/users/15134682">Click Here!</a></p>
         </div>
         <div class="card"  style="width: 250px; height:250px">
             <div class="card-header">
