--- a/People.html
+++ b/People.html
@@ -15,7 +15,10 @@
         }
         button{width:250px}
         h1{text-align: center}
-        div.b {text-align: left}
+        div.b {
+            text-align: left;
+            text-indent: 50px;
+        }
         ul {
             text-align: left;
             list-style-position: inside;
