Indexing par for all needed files

--- a/Browser_War.html
+++ b/Browser_War.html
@@ -15,7 +15,8 @@
         }
         button{width:250px}
         h1{text-align: center}
-        div.b {text-align: left}
+        div.b {text-align: left;
+            text-indent: 50px;}
         ul {
             text-align: left;
             list-style-position: inside;
