Objective page(About.html) rearrange

--- a/About.html
+++ b/About.html
@@ -68,7 +68,7 @@
 <h1>Objectives:</h1>
 <div class="row">
     <div class="col-sm">
-        <ul>
+        <ul style="width: 600">
             <li> 1) Learn about the Creation of the Internet</li>
             <li> 2) Learn about the True History of the Internet:Browser Wars</li>
             <li> 3) Learn about the True History of the Internet:Internet Search</li>
@@ -76,11 +76,6 @@
             <li> 5) Learn about the True History of the Internet:People Power</li>
             <li> 6) Learn about the Timeline of the Internet</li>
         </ul>
-    </div>
-    <div class="col-sm">
-        <div>
-            <img src="Image/pexels-ann-nekr-5797900.jpg"  alt="browser" width="400" height="400">
-        </div>
     </div>
     <div class="col-sm">
         <div class="card"  style="width: 250px; height:260px">
@@ -114,6 +109,11 @@
         </div>
         <div>
 </div>
+    </div>
+    <div class="col-sm-8">
+        <div>
+            <img src="Image/pexels-ann-nekr-5797900.jpg"  alt="browser" width="400" height="400">
+        </div>
     </div>
 </div>
 <!-- Option 1: Bootstrap Bundle with Popper -->
