Objective page(About.html) rearrange

--- a/About.html
+++ b/About.html
@@ -68,7 +68,7 @@
 <h1>Objectives:</h1>
 <div class="row">
     <div class="col-sm">
-        <ul style="width: 600">
+        <ul style="width: 600px">
             <li> 1) Learn about the Creation of the Internet</li>
             <li> 2) Learn about the True History of the Internet:Browser Wars</li>
             <li> 3) Learn about the True History of the Internet:Internet Search</li>
