--- a/About.html
+++ b/About.html
@@ -78,6 +78,11 @@
         </ul>
     </div>
     <div class="col-sm">
+        <div>
+            <img src="Image/pexels-ann-nekr-5797900.jpg"  alt="browser" width="400" height="400">
+        </div>
+    </div>
+    <div class="col-sm">
         <div class="card"  style="width: 250px; height:260px">
             <div class="card-header">
                 Current Page: Objective
@@ -108,11 +113,6 @@
             </form>
         </div>
         <div>
-</div>
-    </div>
-    <div class="col-sm-8">
-        <div>
-            <img src="Image/pexels-ann-nekr-5797900.jpg"  alt="browser" width="400" height="400">
         </div>
     </div>
 </div>
